--- a/src/main/webapp/admin/harrastajat/treenikäynnit.xhtml
+++ b/src/main/webapp/admin/harrastajat/treenikäynnit.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:dataTable value="#{harrastaja.treenikäynnit}" var="_treenikäynti">
+	<ace:dataTable value="#{harrastaja.treenikäynnit}" var="_treenikäynti" rows="10" paginator="true"
+		paginatorPosition="bottom" paginatorAlwaysVisible="false">
 		<ace:column headerText="Aikaleima">
 			<h:outputText value="#{_treenikäynti.aikaleima}">
 				<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" timeZone="EET" />
