--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -44,6 +44,11 @@
 					<ace:message for="form:ice" />
 					<h:inputText value="#{harrastaja.ice}" id="ice" />
 				</h:panelGrid>
+				<h:outputText value="Huomautus" />
+				<h:panelGrid>
+					<ace:message for="form:huomautus" />
+					<h:inputTextarea value="#{harrastaja.huomautus}" id="huomautus" />
+				</h:panelGrid>
 				<h:outputText value="Arkistoitu" />
 				<h:panelGrid>
 					<ace:message for="form:arkistoitu" />
